--- a/tests/system/lab/install
+++ b/tests/system/lab/install
@@ -8,6 +8,7 @@ uname -a
 
 sudo cp /etc/apt/sources.list /etc/apt/sources.list.bak
 sudo sed -i "/\b\(archives.fledge-iot.org\)\b/d" /etc/apt/sources.list
+sudo rm -f /etc/apt/sources.list.d/fledge.list;
 
 
 export DEBIAN_FRONTEND=noninteractive
