Documentation: fix C++ South plugin signatures involving PLUGIN_HANDLE
Fix the issue #1069

In the 'plugin_developers_guide/03_south_C_plugins.html' documentation page,
the signature of some plugin functions involving PLUGIN_HANDLE is erroneous.

According to the definitions of the function pointers about the South
plugins ($FLEDGE_ROOT/C/services/south/include/south_plugin.h),
fix these signatures.

And use the appropriate C++ 'cast' operator,
more restrictive and accurate 'cast' operator than the C one,
for the 'PLUGIN_HANDLE' object.

Signed-off-by: Mikael Bourhis <mikael.bourhis@smile.fr>

--- a/docs/plugin_developers_guide/03_02_DHT11_C.rst
+++ b/docs/plugin_developers_guide/03_02_DHT11_C.rst
@@ -151,9 +151,9 @@ This is the code for the plugin.cpp file that provides the plugin API:
   /**
    * Poll for a plugin reading
    */
-  Reading plugin_poll(PLUGIN_HANDLE *handle)
+  Reading plugin_poll(PLUGIN_HANDLE handle)
   {
-          DHT11 *dht11 = (DHT11*)handle;
+          DHT11 *dht11 = static_cast<DHT11*>(handle);
           return dht11->takeReading();
   }
 
@@ -162,8 +162,8 @@ This is the code for the plugin.cpp file that provides the plugin API:
    */
   void plugin_reconfigure(PLUGIN_HANDLE *handle, string& newConfig)
   {
-  ConfigCategory	conf("dht", newConfig);
-  DHT11 *dht11 = (DHT11*)*handle;
+          ConfigCategory conf("dht", newConfig);
+          DHT11 *dht11 = static_cast<DHT11*>(*handle);
 
           if (conf.itemExists("asset"))
                   dht11->setAssetName(conf.getValue("asset"));
@@ -177,9 +177,9 @@ This is the code for the plugin.cpp file that provides the plugin API:
   /**
    * Shutdown the plugin
    */
-  void plugin_shutdown(PLUGIN_HANDLE *handle)
+  void plugin_shutdown(PLUGIN_HANDLE handle)
   {
-          DHT11 *dht11 = (DHT11*)handle;
+          DHT11 *dht11 = static_cast<DHT11*>(handle);
           delete dht11;
   }
   };
