Documentation: 'plugin_reconfigure()' takes 'PLUGIN_HANDLE *' as input parameter
Signed-off-by: Mikael Bourhis <mikael.bourhis@smile.fr>

--- a/docs/plugin_developers_guide/03_02_DHT11_C.rst
+++ b/docs/plugin_developers_guide/03_02_DHT11_C.rst
@@ -160,10 +160,10 @@ This is the code for the plugin.cpp file that provides the plugin API:
   /**
    * Reconfigure the plugin
    */
-  void plugin_reconfigure(PLUGIN_HANDLE handle, string& newConfig)
+  void plugin_reconfigure(PLUGIN_HANDLE *handle, string& newConfig)
   {
           ConfigCategory conf("dht", newConfig);
-          DHT11 *dht11 = static_cast<DHT11*>(handle);
+          DHT11 *dht11 = static_cast<DHT11*>(*handle);
 
           if (conf.itemExists("asset"))
                   dht11->setAssetName(conf.getValue("asset"));
